examples/test/testpolicy14002.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14002
  namespace: namespace75
spec:
  podSelector:
    matchLabels:
      key43: value2
      key32: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value15
          key35: value2
      podSelector:
        matchLabels:
          key44: value0
          key2: value25
